--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
     "build": "tsc"
   },
   "devDependencies": {
-    "origami-core-server": "^0.5.2",
+    "@origami/tslint-config": "^0.0.3-alpha.3",
     "tslint": "^5.11.0",
-    "tslint-config-origami": "^1.0.3",
     "typescript": "^3.0.3"
   },
   "dependencies": {
-    "origami-core-lib": "^0.3.13"
+    "@origami/core": "^0.0.3-alpha.10"
   }
 }
